--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -23,50 +23,49 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
+#  development-lint:
+#    name: Clippy with debug-assertions
+#    runs-on: ubuntu-latest
+#    steps:
+#      - uses: actions/checkout@v3.6.0
+#      - uses: rui314/setup-mold@v1
+#      - run: rustup install stable
+#      - run: rustup update
+#      - run: rustup component add clippy
+#      - uses: actions/cache@v3.3.1
+#        with:
+#          path: |
+#            ./.cargo/.build
+#            ./target
+#            ~/.cargo
+#          key: ${{ runner.os }}-cargo-dev-${{ hashFiles('**/Cargo.lock') }}
+#      - name: Clippy
+#        uses: actions-rs/cargo@v1.0.3
+#        with:
+#          command: clippy
+#          args: -- -D warnings -C debug-assertions=y
 
-  development-lint:
-    name: Clippy with debug-assertions
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3.6.0
-      - uses: rui314/setup-mold@v1
-      - run: rustup install stable
-      - run: rustup update
-      - run: rustup component add clippy
-      - uses: actions/cache@v3.3.1
-        with:
-          path: |
-            ./.cargo/.build
-            ./target
-            ~/.cargo
-          key: ${{ runner.os }}-cargo-dev-${{ hashFiles('**/Cargo.lock') }}
-      - name: Clippy
-        uses: actions-rs/cargo@v1.0.3
-        with:
-          command: clippy
-          args: -- -D warnings -C debug-assertions=y
-  
-  production-lint:
-    name: Clippy without debug-assertions
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3.6.0
-      - uses: rui314/setup-mold@v1
-      - run: rustup install stable
-      - run: rustup update
-      - run: rustup component add clippy
-      - uses: actions/cache@v3.3.1
-        with:
-          path: |
-            ./.cargo/.build
-            ./target
-            ~/.cargo
-          key: ${{ runner.os }}-cargo-prod-${{ hashFiles('**/Cargo.lock') }}
-      - name: Clippy
-        uses: actions-rs/cargo@v1.0.3
-        with:
-          command: clippy
-          args: -- -D warnings -C debug-assertions=n
+#  production-lint:
+#    name: Clippy without debug-assertions
+#    runs-on: ubuntu-latest
+#    steps:
+#      - uses: actions/checkout@v3.6.0
+#      - uses: rui314/setup-mold@v1
+#      - run: rustup install stable
+#      - run: rustup update
+#      - run: rustup component add clippy
+#      - uses: actions/cache@v3.3.1
+#        with:
+#          path: |
+#            ./.cargo/.build
+#            ./target
+#            ~/.cargo
+#          key: ${{ runner.os }}-cargo-prod-${{ hashFiles('**/Cargo.lock') }}
+#      - name: Clippy
+#        uses: actions-rs/cargo@v1.0.3
+#        with:
+#          command: clippy
+#          args: -- -D warnings -C debug-assertions=n
 
   # things that use the cargo-test cache
   test:
@@ -87,8 +86,8 @@ jobs:
       - uses: actions-rs/cargo@v1.0.3
         with:
           command: test
-  
-  
+
+
   # Things that don't need a cache
   fmt:
     name: Rustfmt
