Replace app-binary-name var with project name

--- a/create-rust-app_cli/template-plugin-container/Dockerfile
+++ b/create-rust-app_cli/template-plugin-container/Dockerfile
@@ -13,7 +13,7 @@ RUN apk --no-cache add --update nodejs npm libc-dev openssl-dev libpq-dev
 WORKDIR /app
 COPY . .
 # note: this also builds the frontend (see `build.rs`)
-RUN cargo build --release --bin app-binary-name --target x86_64-unknown-linux-musl
+RUN cargo build --release --bin $APP_BINARY_NAME --target x86_64-unknown-linux-musl
 
 #
 # Step 2: create an image just containing the compiled app and static assets
@@ -22,9 +22,9 @@ FROM alpine:latest
 WORKDIR /app
 COPY --from=build /app /appPtr
 RUN ls -lha /appPtr
-COPY --from=build /app/.cargo/.build/release/app-binary-name /app/app-binary-name
+COPY --from=build /app/.cargo/.build/release/$APP_BINARY_NAME /app/$APP_BINARY_NAME
 COPY --from=build /app/frontend/dist /app/frontend/dist
 
 EXPOSE 3000
 
-CMD ["app-binary-name"]
+CMD ["$APP_BINARY_NAME"]
