Container plugin improvements (#332)
* Container plugin improvements

* Replace app-binary-name var with project name

* cargo fmt

* Change defaults

--- a/create-rust-app_cli/template-plugin-container/Dockerfile
+++ b/create-rust-app_cli/template-plugin-container/Dockerfile
@@ -1,22 +1,30 @@
-FROM rust:1.54
+#
+# Step 1: use the rust image to compile the app
+#
+FROM rust:alpine as build
 
-RUN apt-get update -y
-RUN apt-get install -y nodejs npm
-RUN npm i -g yarn
-# You can remove the next RUN step if you're not using the Create Rust App 'auth' plugin
-# For the argonautica crate, we need to install LLVM/Clang v3.9 or higher
-RUN apt-get install -y clang llvm-dev libclang-dev
+# update cargo index as a separate step to cache it
+RUN cargo search create-rust-app
 
-# Since the official rust image doesn't have nightly variants, we're going to install it ourselves
-# This will make the image bigger than it needs to be -- you can try using another image if this is important to you
-RUN rustup update nightly;
-RUN rustup default nightly;
+# install dependencies
+RUN apk --no-cache add --update nodejs npm libc-dev openssl-dev libpq-dev
 
+# build the app
 WORKDIR /app
 COPY . .
+# note: this also builds the frontend (see `build.rs`)
+RUN cargo build --release --bin $APP_BINARY_NAME --target x86_64-unknown-linux-musl
 
-RUN cargo build --release
+#
+# Step 2: create an image just containing the compiled app and static assets
+#
+FROM alpine:latest
+WORKDIR /app
+COPY --from=build /app /appPtr
+RUN ls -lha /appPtr
+COPY --from=build /app/.cargo/.build/release/$APP_BINARY_NAME /app/$APP_BINARY_NAME
+COPY --from=build /app/frontend/dist /app/frontend/dist
 
 EXPOSE 3000
 
-CMD ["cargo", "run", "--release"]
+CMD ["$APP_BINARY_NAME"]
