Minor CI changes

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,23 +1,14 @@
-name: Rust Continuous Integration
+name: CI
 on:
-  workflow_dispatch:
   push:
-    branches: 
-      - "main"
-    paths: 
-      - "**.rs"
-      - "Cargo.lock"
-      - "Cargo.toml"
+    branches:
+      - main
   pull_request:
-    paths: 
-      - "**.rs"
-      - "Cargo.lock"
-      - "Cargo.toml"
+  workflow_dispatch:
+
 env:
   CARGO_TERM_COLOR: always
-  CARGO_REGISTRIES_CRATES_IO_PROTOCOL: sparse
-  CARGO_INCREMENTAL: true
-  
+
 concurrency:
   group:  CI-${{ github.ref }}
   cancel-in-progress: true
