--- a/create-rust-app/Cargo.toml
+++ b/create-rust-app/Cargo.toml
@@ -32,6 +32,7 @@ diesel = { version = "2.1.0", default-features = false, features = [
   "chrono",
 ] } # + plugin_dev, plugin_auth
 once_cell = "1.17.1"
+diesel_logger = "0.3.0"
 
 ##
 ## Database
