--- a/create-rust-app/Cargo.toml
+++ b/create-rust-app/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "create-rust-app"
 description = "Set up a modern rust+react web app by running one command."
-version = "10.0.0"
+version = "11.0.0"
 edition = "2018"
 authors = ["Haris <4259838+Wulf@users.noreply.github.com>"]
 readme = "../README.md"
@@ -32,6 +32,7 @@ diesel = { version = "2.1.0", default-features = false, features = [
   "chrono",
 ] } # + plugin_dev, plugin_auth
 once_cell = "1.17.1"
+diesel_logger = "0.3.0"
 
 ##
 ## Database
