--- a/.github/workflows/CLI-PoemPostgres-CI.yml
+++ b/.github/workflows/CLI-PoemPostgres-CI.yml
@@ -2,36 +2,41 @@ name: CLI Continuous Integration (Compilation tests for variations of Poem + Pos
 on:
   workflow_dispatch:
   push:
-    branches: 
+    branches:
       - "main"
-    paths: 
+    paths:
       - "**.rs"
       - "Cargo.lock"
       - "Cargo.toml"
   pull_request:
-    paths: 
+    paths:
       - "**.rs"
       - "Cargo.lock"
       - "Cargo.toml"
 env:
   CARGO_TERM_COLOR: always
   CARGO_REGISTRIES_CRATES_IO_PROTOCOL: sparse
-  
+
 concurrency:
-  group:  CI-PP-${{ github.ref }}
+  group: CI-PP-${{ github.ref }}
   cancel-in-progress: true
 
-jobs: {}
+jobs:
+  Dummy-Job:
+    name: dummy job so workflow is valid
+    runs-on: ubuntu-latest
+    steps:
+      - run: echo "lorem ipsum dolor sit amet"
   # naming convention is: [backend]-[database]-[plugins]
 #  Poem-Postgres-None:
 #    name: Poem w/ Postgres and no plugins
 #    runs-on: ubuntu-latest
 #    steps:
-#      - uses: actions/checkout@v3.6.0
+#      - uses: actions/checkout@v4.1.4
 #      - uses: rui314/setup-mold@v1
 #      - run: rustup install stable
 #      - run: rustup update
-#      - uses: actions/cache@v3.3.1
+#      - uses: actions/cache@v4.0.2
 #        with:
 #          path: |
 #            .cargo/.build
@@ -55,11 +60,11 @@ jobs: {}
 #    name: Poem w/ Postgres and all valid plugins
 #    runs-on: ubuntu-latest
 #    steps:
-#      - uses: actions/checkout@v3.6.0
+#      - uses: actions/checkout@v4.1.4
 #      - uses: rui314/setup-mold@v1
 #      - run: rustup install stable
 #      - run: rustup update
-#      - uses: actions/cache@v3.3.1
+#      - uses: actions/cache@v4.0.2
 #        with:
 #          path: |
 #            .cargo/.build
@@ -78,94 +83,94 @@ jobs: {}
 #          cargo dsync
 #          cargo check
 
-  # Poem-Postgres-Container:
-  #   needs: [Poem-Postgres-None]
-  #   name: Poem w/ Postgres and the container plugin
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v3.6.0
-  #     - uses: rui314/setup-mold@v1
-  #     - run: rustup install stable
-  #     - run: rustup update
-  #     - uses: actions/cache@v3.3.1
-  #       with:
-  #         path: |
-  #           **/.cargo/.build
-  #           **/target
-  #         key: ${{ runner.os }}-cargo-cli-PP-${{ hashFiles('**/Cargo.lock') }}
-  #     - run: git config --global user.name test
-  #     - run: git config --global user.email example@email.com
-  #     - uses: actions-rs/cargo@v1.0.3
-  #       with:
-  #         command: run
-  #         args: --bin create-rust-app -- create -c -d postgres -b poem --plugins=container test-project
-  #     - run: cd test-project && printf "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs && cargo dsync && cargo check
-  #
-  # Poem-Postgres-Auth:
-  #   needs: [Poem-Postgres-None]
-  #   name: Poem w/ Postgres and the auth plugin
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v3.6.0
-  #     - uses: rui314/setup-mold@v1
-  #     - run: rustup install stable
-  #     - run: rustup update
-  #     - uses: actions/cache@v3.3.1
-  #       with:
-  #         path: |
-  #           **/.cargo/.build
-  #           **/target
-  #         key: ${{ runner.os }}-cargo-cli-PP-${{ hashFiles('**/Cargo.lock') }}
-  #     - run: git config --global user.name test
-  #     - run: git config --global user.email example@email.com
-  #     - uses: actions-rs/cargo@v1.0.3
-  #       with:
-  #         command: run
-  #         args: --bin create-rust-app -- create -c -d postgres -b poem --plugins=auth test-project
-  #     - run: cd test-project && printf "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs && cargo dsync && cargo check
-  #
-  # Poem-Postgres-Storage:
-  #   needs: [Poem-Postgres-None]
-  #   name: Poem w/ Postgres and the storage plugin
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v3.6.0
-  #     - uses: rui314/setup-mold@v1
-  #     - run: rustup install stable
-  #     - run: rustup update
-  #     - uses: actions/cache@v3.3.1
-  #       with:
-  #         path: |
-  #           **/.cargo/.build
-  #           **/target
-  #         key: ${{ runner.os }}-cargo-cli-PP-${{ hashFiles('**/Cargo.lock') }}
-  #     - run: git config --global user.name test
-  #     - run: git config --global user.email example@email.com
-  #     - uses: actions-rs/cargo@v1.0.3
-  #       with:
-  #         command: run
-  #         args: --bin create-rust-app -- create -c -d postgres -b poem --plugins=storage test-project
-  #     - run: cd test-project && printf "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs && cargo dsync && cargo check
-  #
-  # Poem-Postgres-GraphQL:
-  #   needs: [Poem-Postgres-None]
-  #   name: Poem w/ Postgres and the graphql plugin
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v3.6.0
-  #     - uses: rui314/setup-mold@v1
-  #     - run: rustup install stable
-  #     - run: rustup update
-  #     - uses: actions/cache@v3.3.1
-  #       with:
-  #         path: |
-  #           **/.cargo/.build
-  #           **/target
-  #         key: ${{ runner.os }}-cargo-cli-PP-${{ hashFiles('**/Cargo.lock') }}
-  #     - run: git config --global user.name test
-  #     - run: git config --global user.email example@email.com
-  #     - uses: actions-rs/cargo@v1.0.3
-  #       with:
-  #         command: run
-  #         args: --bin create-rust-app -- create -c -d postgres -b poem --plugins=graphql,auth test-project
-  #     - run: cd test-project && printf "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs && cargo dsync && cargo check
+# Poem-Postgres-Container:
+#   needs: [Poem-Postgres-None]
+#   name: Poem w/ Postgres and the container plugin
+#   runs-on: ubuntu-latest
+#   steps:
+#     - uses: actions/checkout@v4.1.4
+#     - uses: rui314/setup-mold@v1
+#     - run: rustup install stable
+#     - run: rustup update
+#     - uses: actions/cache@v4.0.2
+#       with:
+#         path: |
+#           **/.cargo/.build
+#           **/target
+#         key: ${{ runner.os }}-cargo-cli-PP-${{ hashFiles('**/Cargo.lock') }}
+#     - run: git config --global user.name test
+#     - run: git config --global user.email example@email.com
+#     - uses: actions-rs/cargo@v1.0.3
+#       with:
+#         command: run
+#         args: --bin create-rust-app -- create -c -d postgres -b poem --plugins=container test-project
+#     - run: cd test-project && printf "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs && cargo dsync && cargo check
+#
+# Poem-Postgres-Auth:
+#   needs: [Poem-Postgres-None]
+#   name: Poem w/ Postgres and the auth plugin
+#   runs-on: ubuntu-latest
+#   steps:
+#     - uses: actions/checkout@v4.1.4
+#     - uses: rui314/setup-mold@v1
+#     - run: rustup install stable
+#     - run: rustup update
+#     - uses: actions/cache@v4.0.2
+#       with:
+#         path: |
+#           **/.cargo/.build
+#           **/target
+#         key: ${{ runner.os }}-cargo-cli-PP-${{ hashFiles('**/Cargo.lock') }}
+#     - run: git config --global user.name test
+#     - run: git config --global user.email example@email.com
+#     - uses: actions-rs/cargo@v1.0.3
+#       with:
+#         command: run
+#         args: --bin create-rust-app -- create -c -d postgres -b poem --plugins=auth test-project
+#     - run: cd test-project && printf "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs && cargo dsync && cargo check
+#
+# Poem-Postgres-Storage:
+#   needs: [Poem-Postgres-None]
+#   name: Poem w/ Postgres and the storage plugin
+#   runs-on: ubuntu-latest
+#   steps:
+#     - uses: actions/checkout@v4.1.4
+#     - uses: rui314/setup-mold@v1
+#     - run: rustup install stable
+#     - run: rustup update
+#     - uses: actions/cache@v4.0.2
+#       with:
+#         path: |
+#           **/.cargo/.build
+#           **/target
+#         key: ${{ runner.os }}-cargo-cli-PP-${{ hashFiles('**/Cargo.lock') }}
+#     - run: git config --global user.name test
+#     - run: git config --global user.email example@email.com
+#     - uses: actions-rs/cargo@v1.0.3
+#       with:
+#         command: run
+#         args: --bin create-rust-app -- create -c -d postgres -b poem --plugins=storage test-project
+#     - run: cd test-project && printf "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs && cargo dsync && cargo check
+#
+# Poem-Postgres-GraphQL:
+#   needs: [Poem-Postgres-None]
+#   name: Poem w/ Postgres and the graphql plugin
+#   runs-on: ubuntu-latest
+#   steps:
+#     - uses: actions/checkout@v4.1.4
+#     - uses: rui314/setup-mold@v1
+#     - run: rustup install stable
+#     - run: rustup update
+#     - uses: actions/cache@v4.0.2
+#       with:
+#         path: |
+#           **/.cargo/.build
+#           **/target
+#         key: ${{ runner.os }}-cargo-cli-PP-${{ hashFiles('**/Cargo.lock') }}
+#     - run: git config --global user.name test
+#     - run: git config --global user.email example@email.com
+#     - uses: actions-rs/cargo@v1.0.3
+#       with:
+#         command: run
+#         args: --bin create-rust-app -- create -c -d postgres -b poem --plugins=graphql,auth test-project
+#     - run: cd test-project && printf "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs && cargo dsync && cargo check
