--- a/crates/create-rust-app_cli/Cargo.toml
+++ b/crates/create-rust-app_cli/Cargo.toml
@@ -1,20 +1,14 @@
 [package]
 name = "create-rust-app_cli"
-description = "Set up a modern rust+react web app by running one command."
-version = "11.0.1"
-authors = ["Haris <4259838+Wulf@users.noreply.github.com>"]
-edition = "2018"
-readme = "../README.md"
-repository = "https://github.com/Wulf/create-rust-app"
-license = "MIT OR Apache-2.0"
-keywords = ["react", "typescript", "generation", "backend", "frontend"]
-categories = [
-  "command-line-utilities",
-  "development-tools",
-  "web-programming",
-  "config",
-  "database",
-]
+description.workspace = true
+version.workspace = true
+authors.workspace = true
+edition.workspace = true
+readme.workspace = true
+repository.workspace = true
+license.workspace = true
+keywords.workspace = true
+categories.workspace = true
 default-run = "create-rust-app"
 
 [dependencies]
@@ -27,7 +21,6 @@ walkdir = "2.5"
 rust-embed = { version = "8.3", features = ["debug-embed"] }
 clap = { version = "4.5", features = ["wrap_help", "derive", "cargo"] }
 toml = "0.7.8"
-# tsync = "1"
 update-informer = "1.1"
 qsync = { version = "1.0.1" }
 
