--- a/.github/workflows/CLI-ActixPostgres-CI.yml
+++ b/.github/workflows/CLI-ActixPostgres-CI.yml
@@ -42,9 +42,9 @@ jobs:
       - name: test test-project
         working-directory: ./test-project
         run: |
-          printf "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs 
-          sed -i 's/create-rust-app = {/create-rust-app = { path = "..\/create-rust-app", /' ./Cargo.toml 
-          cargo dsync 
+          printf "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todo (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs 
+          sed -i 's/create-rust-app = {/create-rust-app = { path = "..\/crates\/create-rust-app", /' ./Cargo.toml 
+          cargo dsync
           cargo check
 
   Actix-Postgres-All:
@@ -67,9 +67,9 @@ jobs:
       - name: test test-project
         working-directory: ./test-project
         run: |
-          printf "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs 
-          sed -i 's/create-rust-app]/create-rust-app]\npath = "..\/create-rust-app"/' Cargo.toml 
-          cargo dsync 
+          printf "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todo (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs 
+          sed -i 's/create-rust-app]/create-rust-app]\npath = "..\/crates\/create-rust-app"/' Cargo.toml 
+          cargo dsync
           cargo check
 
   # Actix-Postgres-Container:
