--- a/.github/workflows/CLI-ActixSqlite-CI.yml
+++ b/.github/workflows/CLI-ActixSqlite-CI.yml
@@ -42,8 +42,8 @@ jobs:
       - name: test test-project
         working-directory: ./test-project
         run: |
-          printf "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamp,\n        updated_at -> Timestamp,\n    }\n}" >> ./backend/schema.rs 
-          sed -i 's/create-rust-app = {/create-rust-app = { path = "..\/create-rust-app", /' ./Cargo.toml  
+          printf "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todo (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamp,\n        updated_at -> Timestamp,\n    }\n}" >> ./backend/schema.rs 
+          sed -i 's/create-rust-app = {/create-rust-app = { path = "..\/crates\/create-rust-app", /' ./Cargo.toml  
           cargo dsync 
           cargo check
 
@@ -67,8 +67,8 @@ jobs:
       - name: test test-project
         working-directory: ./test-project
         run: |
-          printf "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamp,\n        updated_at -> Timestamp,\n    }\n}" >> ./backend/schema.rs 
-          sed -i 's/create-rust-app]/create-rust-app]\npath = "..\/create-rust-app"/' Cargo.toml 
+          printf "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todo (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamp,\n        updated_at -> Timestamp,\n    }\n}" >> ./backend/schema.rs 
+          sed -i 's/create-rust-app]/create-rust-app]\npath = "..\/crates\/create-rust-app"/' Cargo.toml 
           cargo dsync 
           cargo check
 
